# ANPR_Ground_Control_Station

./: CMakeLists.txt  README.md  blacklist_data.csv  color_data.csv  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  save history.txt  save.csv  tcpserverclass.cpp  tcpserverclass.h  utilities.cpp  utilities.h
